--- a/src/main/webapp/WEB-INF/templates/template_default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/template_default.xhtml
@@ -1,19 +1,23 @@
 <?xml version='1.0' encoding='UTF-8' ?> 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="jakarta.faces.html"
+      xmlns:ui="jakarta.faces.facelets">
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <h:outputStylesheet name="./css/default.css"/>
-        <h:outputStylesheet name="./css/cssLayout.css"/>
-        <title>Facelets Template</title>
+        <h:outputStylesheet name="/css/default.css"/>
+        <h:outputStylesheet name="/css/cssLayout.css"/>
+        <title>Exercices sur PRG</title>
     </h:head>
 
+    <ui:insert name="metadata"/>
+    
+    <ui:insert name="left">
+        <ui:include src="menu.xhtml"/>
+    </ui:insert>
+    
     <h:body>
-
-
         <div id="top" class="top">
             <ui:insert name="top">Top</ui:insert>
         </div>
